test/mutation_analysis/s0168_excel_sheet_column_title/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0168_excel_sheet_column_title/hafis/starchat/mutants/2/Solution.java:30: error: unreachable statement
        return sb.reverse().toString();
        ^
1 error
